--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
+# Core dependencies
 pyrogram==2.0.106
-tgcrypto==1.2.5
-python-dotenv==1.0.0 
+tgcrypto==1.2.5  # For better performance with Pyrogram
+aiohttp==3.9.1   # For async HTTP requests
+
+# Time and date handling
+python-dateutil==2.8.2
+
+# Environment and configuration
+python-dotenv==1.0.0  # For loading environment variables
+
+# Utilities
+urllib3==2.1.0    # For URL handling
+certifi==2023.11.17  # Required for HTTPS 
