--- a/.env
+++ b/.env
@@ -1,9 +1,10 @@
 API_ID=20222576
 API_HASH=c5df57f366bc4ee7f7d7af574f817fb8
 BOT_TOKEN=7656173756:AAGtfcafadRunjjyXyMVrrUZprovi8Z6vUo
-BOT_USERNAME=Corexultrabot
+BOT_USERNAME=LinkProtectorXBot
 OWNER_ID=7029363479
 SUDO_USERS=7029363479
 CHANNEL_ID=-1002034072106
 PREMIUM_LOGS=-1002034072106
+PORT=8080
 MONGO_URL=mongodb+srv://jaydevswebpannel:jaydevgadhvi.mongodb.net/?retryWrites=true&w=majority&appName=Wave
